# Neo-Mobile

./: FUNCIONALIDADES.md  PROMPTS_CHAT_CONTROL.md  README.md  flutter_launcher_icons.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
docs/: INSPECTOR_MODE.md
lib/: main.dart
lib/ai/config/: ai_config_store.dart
lib/ai/models/: chat_message.dart  chat_reply.dart  chat_session.dart
lib/automation/: gesture_models.dart  gesture_player.dart  gesture_recorder.dart  key_combos.dart  shortcut_controller.dart  shortcut_settings_screen.dart  shortcut_storage.dart  workflow_editor_screen.dart
lib/chat_control/: chat_control_controller.dart
lib/inspector/: inspectable.dart  inspector_controller.dart  inspector_demo_screen.dart  inspector_hit_test.dart  inspector_node.dart  inspector_overlay.dart  inspector_painter.dart  inspector_panel.dart  inspector_registry.dart  inspector_websocket_client.dart
lib/llm/: generation_controller.dart  llm_prefs.dart  local_llm_service.dart  model_catalog.dart  model_registry.dart
lib/overlay_control/: overlay_controller.dart  overlay_permissions.dart  overlay_status.dart
lib/screens/: app_hub_screen.dart  home_chat_screen.dart  overlay_inspector_screen.dart
lib/theme/: app_colors.dart  app_theme.dart
lib/widgets/: chat_bubble.dart  composer_bar.dart  empty_state_widget.dart  model_icon.dart  neon_card.dart  segmented_tabs.dart  status_badge.dart
tools/inspector_ws_server/: README.md  package-lock.json  package.json  server.js
web/: manifest.json
(+81 files in other folders)
